@@ -4,7 +4,8 @@ now: Version current
       managed to block completely the human user (it was a bit tedious to wait
       before)
     - Added a bit of randomness to the starting move when the computer player
-      starts. What is life without randomness after all? 
+      starts. What is life without randomness after all?
+    - Progress bar in the status bar is fully functional
 
 04/04/2010: Version 0.1.3
     - Computer's pieces left are shown on the right side of the board
